examples/test/testpolicy9941.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9941
  namespace: namespace65
spec:
  podSelector:
    matchLabels:
      key46: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value10
          key34: value19
          key3: value17
      podSelector:
        matchLabels:
          key21: value23
          key35: value10
          key42: value35
